force-app/main/default/objects/Rates_Table__c/Rates_Table__c.object-meta.xml
<CustomObject>
    <label>Rates Table</label>
    <nameField>
        <displayFormat>RT-{000000}</displayFormat>
        <label>Rate Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates Tables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>