force-app/main/default/objects/Rates_Table__c/fields/Conteo__c.field-meta.xml
<CustomField>
    <fullName>Conteo__c</fullName>
    <label>Conteo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>