force-app/main/default/objects/Rates_Table__c/fields/Createtime__c.field-meta.xml
<CustomField>
    <fullName>Createtime__c</fullName>
    <label>Createtime</label>
    <type>DateTime</type>
</CustomField>