force-app/main/default/objects/Rates_Table__c/fields/Engagetype__c.field-meta.xml
<CustomField>
    <fullName>Engagetype__c</fullName>
    <label>Engagetype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>