force-app/main/default/objects/Rates_Table__c/fields/List_Hour__c.field-meta.xml
<CustomField>
    <fullName>List_Hour__c</fullName>
    <label>List Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>