force-app/main/default/objects/Rates_Table__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Design - Req. Gathering</fullName>
            </value>
            <value>
                <fullName>Design - Specification</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Test / UAT</fullName>
            </value>
            <value>
                <fullName>Test / Cutover Prep</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Hypercare</fullName>
            </value>
            <value>
                <fullName>Cutover Prep</fullName>
            </value>
            <value>
                <fullName>Launch + Hypercare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>