force-app/main/default/objects/Rates_Table__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <label>Profit Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>