force-app/main/default/objects/Rates_Table__c/fields/Project_Line__c.field-meta.xml
<CustomField>
    <fullName>Project_Line__c</fullName>
    <label>Project Line</label>
    <referenceTo>Linea_de_Proyecto__c</referenceTo>
    <relationshipName>Rate_Table</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>