force-app/main/default/objects/Rates_Table__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>