force-app/main/default/objects/Rates_Table__c/fields/SOW_Price__c.field-meta.xml
<CustomField>
    <fullName>SOW_Price__c</fullName>
    <label>SOW Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>