force-app/main/default/objects/Rates_Table__c/fields/T_End_Date__c.field-meta.xml
<CustomField>
    <fullName>T_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>