force-app/main/default/objects/Rates_Table__c/fields/T_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>T_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>