force-app/main/default/objects/Rates_Table__c/fields/VASS_Role__c.field-meta.xml
<CustomField>
    <fullName>VASS_Role__c</fullName>
    <label>VASS Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Automation Tester Intermediate</fullName>
            </value>
            <value>
                <fullName>Automation Tester Junior</fullName>
            </value>
            <value>
                <fullName>Automation Tester Senior</fullName>
            </value>
            <value>
                <fullName>Backend Intermediate Developer</fullName>
            </value>
            <value>
                <fullName>Backend Junior Developer</fullName>
            </value>
            <value>
                <fullName>Backend Senior Developer</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Business Analyst (French speaking part)</fullName>
            </value>
            <value>
                <fullName>Business Analyst (German speaking part)</fullName>
            </value>
            <value>
                <fullName>Business Analyst Intermediate</fullName>
            </value>
            <value>
                <fullName>Business Analyst Junior</fullName>
            </value>
            <value>
                <fullName>Business Analyst Senior</fullName>
            </value>
            <value>
                <fullName>Business Process Specialist Intermediate</fullName>
            </value>
            <value>
                <fullName>Business Process Specialist Junior</fullName>
            </value>
            <value>
                <fullName>Business Process Specialist Senior</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant (French speaking part)</fullName>
            </value>
            <value>
                <fullName>Consultant (German speaking part)</fullName>
            </value>
            <value>
                <fullName>Data Scientist Intermediate</fullName>
            </value>
            <value>
                <fullName>Data Scientist Junior</fullName>
            </value>
            <value>
                <fullName>Data Scientist Senior</fullName>
            </value>
            <value>
                <fullName>Delivery Analyst</fullName>
            </value>
            <value>
                <fullName>Delivery Consultant</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Designer (French speaking part)</fullName>
            </value>
            <value>
                <fullName>Designer (German speaking part)</fullName>
            </value>
            <value>
                <fullName>Designer Nearshore (N. Macedonia)</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>