force-app/main/default/objects/Rates_Table__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>CEILING(((T_Start_Date__c- DATE(YEAR(T_Start_Date__c), 1, 1) + 1) +
MOD(DATE(YEAR(T_Start_Date__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>