force-app/main/default/objects/Rates_Table__c/fields/WeekOFTheYear__c.field-meta.xml
<CustomField>
    <fullName>WeekOFTheYear__c</fullName>
    <formula>TEXT( YEAR(T_Start_Date__c))+&apos;-W&apos; +if(ISOWEEK(  T_Start_Date__c )&lt;10,&apos;0&apos; +text(ISOWEEK(T_Start_Date__c )),text(ISOWEEK(  T_Start_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeekOFTheYear</label>
    <type>Text</type>
</CustomField>